@@ -531,6 +531,16 @@ public class LibertyClient {
         return args;
     }
 
+    private static int javaVersion() {
+        String version = System.getProperty("java.version");
+        String[] versionElements = version.split("\\D"); // split on non-digits
+
+        // Pre-JDK 9 the java.version is 1.MAJOR.MINOR
+        // Post-JDK 9 the java.version is MAJOR.MINOR
+        int i = Integer.valueOf(versionElements[0]) == 1 ? 1 : 0;
+        return Integer.valueOf(versionElements[i]);
+    }
+
     public ProgramOutput startClientWithArgs(boolean preClean, boolean cleanStart,
                                              boolean validateApps, boolean expectStartFailure,
                                              String clientCmd, List<String> args,
@@ -622,6 +632,11 @@ public class LibertyClient {
             } else {
                 LOG.warning("The build is configured to run FAT tests with Java 2 Security enabled, but the FAT client " + getClientName() +
                             " is exempt from Java 2 Security regression testing.");
+            }
+
+            // If we are running on Java 18+, then we need to explicitly enable the security manager
+            if (javaVersion() >= 18) {
+                JVM_ARGS += " -Djava.security.manager=allow";
             }
         }
 
@@ -749,6 +764,7 @@ public class LibertyClient {
             w.write("\n".getBytes());
             w.write("websphere.java.security.norethrow=false".getBytes());
             w.write("\n".getBytes());
+
             Log.info(c, "addJava2SecurityPropertiesToBootstrapFile", "Successfully updated bootstrap.properties file with Java 2 Security properties");
         } catch (Exception e) {
             Log.info(c, "addJava2SecurityPropertiesToBootstrapFile", "Caught exception updating bootstap.properties file with Java 2 Security properties, e: ", e.getMessage());
@@ -2203,6 +2219,7 @@ public class LibertyClient {
                 optionList.add(option.toString());
             }
         }
+
         this.setJvmOptions(optionList);
     }
 
